test/mlir/tanh_bad_case_0.mlir.stderr
test/mlir/tanh_bad_case_0.mlir:5:8: error: tanh input must be a float type
  %0 = colgm.tanh %arg : tensor<i32>
       ^
